live/prod/kubernetes/argo-rollouts/argo-rollouts/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  hostnames:
    - configured-by-environment
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: argo-rollouts-dashboard
          port: 3100
          weight: 1
